--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
+@layer base {
+    html, body{
+    width: 100vw;
+    height: 100vh;
+    }
+}
 @tailwind components;
 @tailwind utilities;
