--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500;700;800;900&display=swap');
+
 @tailwind base;
 @layer base {
-    html, body{
-    width: 100vw;
-    height: 100vh;
-    @apply dark:text-white;
-    @apply dark:bg-black;
+    body{
+        @apply dark:text-white;
+        @apply dark:bg-black;
+        font-family: 'Noto Sans TC', sans-serif;
+    &>#__nuxt{
+        display: flex;
+        min-height: 100dvh;
+        flex-direction: column;
+    }
     }
 }
 @tailwind components;
