--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -51,10 +51,10 @@
     }
     @keyframes wave {
       0% {
-        top: 14%;
+        top: 0px;
       }
       100% {
-        top: 16.5%;
+        top: 5px;
       }
     }
   }
