--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -25,10 +25,11 @@
           50px at 50% -23.5px,
           #0000 99%,
           rgba(28, 114, 235, 0.6) 100%
-        ) 0px/76px 100% repeat-x,
+        )
+        0px/76px 100% repeat-x,
       radial-gradient(50px at 50% -23.5px, #0000 99%, rgb(28, 114, 235) 100%)
         6px 3px/45px 100% repeat-x;
-        animation:wave 80s ease-in-out infinite ;
+    animation: wave 80s ease-in-out infinite;
     & > img {
       animation:
         position 40s ease-in-out infinite,
@@ -38,7 +39,6 @@
       0% {
         left: -1vw;
         opacity: 0;
-        
       }
       10% {
         opacity: 1;
@@ -61,13 +61,19 @@
     }
     @keyframes wave {
       0% {
-        background-position: 50% 0px, -49% 0px;
+        background-position:
+          50% 0px,
+          -49% 0px;
       }
-      50%{
-        background-position: 25% 3px, 20% 0px;
+      50% {
+        background-position:
+          25% 3px,
+          20% 0px;
       }
       100% {
-        background-position: -50% 0px, 49% 0px;
+        background-position:
+          -50% 0px,
+          49% 0px;
       }
     }
   }
